<resources>
    <string name="app_name">MovieMate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main">Главная</string>
    <string name="search">Поиск</string>
    <string name="movie_not_found">Фильм не найден</string>
    <string name="error_message">Ошибка загрузки</string>
    <string name="nothing_found">Ничего не найдено!</string>
    <string name="recommended_movies">Советуем посмотреть</string>
    <string name="categories">Категории</string>
    <string name="repeat">Повторить</string>
    <string name="description">Описание</string>
    <string name="read_completely"><b>Читать полностью</b></string>
    <string name="expandable_text">Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание</string>
    <string name="roll_up">Свернуть</string>
    <string name="year_production">Год выхода: </string>
    <string name="country">Страна: </string>
    <string name="genre">Жанр: </string>
    <string name="time">Время: </string>
    <string name="search_for_the_best_movies">Поиск лучших фильмов</string>
    <string name="rating">Рейтинг</string>
    <string name="from_to">от %d до %d</string>
    <string name="genre_filter">Жанр</string>
    <string name="any_genre">любой</string>
    <string name="country_filter">Страна</string>
    <string name="any_country">любая</string>
    <string name="year">Год</string>
</resources>