<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    android:orientation="vertical"
    tools:context=".fragments.movie_filter.MovieFilterFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorOnPrimary"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:navigationIconTint="?attr/colorSecondaryVariant"
        app:title="@string/search_for_the_best_movies"
        app:titleTextAppearance="@style/TitleToolbar" />

    <TextView
        android:id="@+id/text_rating"
        style="@style/point_filter_movie"
        android:text="@string/rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/text_selected_rating"
        style="@style/result_filter"
        app:layout_constraintBottom_toBottomOf="@+id/text_rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_rating" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/slider_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium"
        android:stepSize="1.0"
        android:valueFrom="1.0"
        android:valueTo="10.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_rating"
        app:values="@array/initial_range_slider_values" />

    <TextView
        android:id="@+id/text_genre"
        style="@style/point_filter_movie"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/genre_filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slider_rating" />

    <TextView
        android:id="@+id/text_selected_genre"
        style="@style/result_filter"
        android:text="@string/any_genre"
        app:layout_constraintBottom_toBottomOf="@+id/text_genre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_genre" />

    <TextView
        android:id="@+id/text_country"
        style="@style/point_filter_movie"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginVertical="@dimen/margin_large"
        android:text="@string/country_filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_genre" />

    <TextView
        android:id="@+id/text_selected_country"
        style="@style/result_filter"
        android:text="@string/any_country"
        app:layout_constraintBottom_toBottomOf="@+id/text_country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_country" />

    <TextView
        android:id="@+id/text_year_production"
        style="@style/point_filter_movie"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginVertical="@dimen/margin_large"
        android:text="@string/year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_country" />

    <TextView
        android:id="@+id/text_selected_year_production"
        style="@style/result_filter"
        android:text="@string/any_genre"
        app:layout_constraintBottom_toBottomOf="@+id/text_year_production"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_year_production" />

</androidx.constraintlayout.widget.ConstraintLayout>